<resources>
    <string name="app_name">MercadoAlBosillo</string>
    <string name="Autor">Adolfo Fernandez</string>
    <string name="ProductoText">Producto: </string>
    <string name="PrecioText">Precio: $</string>
    <string name="CantidadText">Cantidad: </string>
    <string name="NombreText">Nombre: </string>
    <string name="DireccionText">Direccion: </string>
    <string name="ValoracionText">Calificacion del 1 al 5</string>
    <string name="ButtonBack">Regresar</string>
    <string name="ButtonInventario">Lista de compra</string>
    <string name="ButtonSaveProducto">Agregar Producto</string>
    <string name="ButtonSaveTienda">Agregar Tienda</string>
    <string name="ButtonAddProduct">Añadir producto</string>
    <string name="ButtonAddShop">Añadir tienda</string>
    <string name="ButtonTienda">Tiendas</string>
    <string name="ProductoHint">Nombre del producto</string>
    <string name="PrecioHint">Precio del producto</string>


    <!-- string del adapter del inventario -->
    <string name="minus">-</string>
    <string name="plus">+</string>

    <!-- string de la toolbar -->
    <string name="inventario">Inventario</string>
    <string name="movimiento">Movimientos</string>
    <string name="ajustes">Ajustes</string>

    <!-- string inventario -->
    <string name="hintBuscar">Buscar nombre</string>
    <string name="hintOrden">Ordenar Por</string>
    <string name="ordenDefecto">Más reciente</string>
    <string name="ordenBebible">Bebibles</string>
    <string name="ordenFruta">Frutas</string>
    <string name="ordenVerdura">Verduras</string>

    <!-- string añadir producto -->
    <string name="hintNombre">Nombre</string>
    <string name="hintPrecio">Precio</string>
    <string name="hintMarca">Marca</string>
    <string name="hintCantidad">Cantidad</string>
    <string name="textTipo">Seleccione el tipo para terminar</string>
    <string name="ButtonBebible">Bebible</string>
    <string name="ButtonFruta">Fruta</string>
    <string name="ButtonVerdura">Verdura</string>
</resources>