<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NombreText"
        android:textSize="18sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/textViewDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DireccionText"
        />
    <TextView
        android:id="@+id/textViewValoracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ValoracionText"
        />
    <Button
        android:id="@+id/buttonGoBackDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ButtonBack"
        />
</LinearLayout>