<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ProductoText"
        android:textSize="18sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/textViewPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PrecioText"
        />
    <Button
        android:id="@+id/buttonGoBackDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ButtonBack"
        />
</LinearLayout>