<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">
    <TextView
        android:id="@+id/textViewProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ProductoText"
        android:textSize="18dp"
        />
    <TextView
        android:id="@+id/textViewPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PrecioText"
        />
    <TextView
        android:id="@+id/textViewCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CantidadText"
        />
</LinearLayout>