<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NombreText"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/textViewDireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DireccionText"
            />
        <TextView
            android:id="@+id/textViewValoracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ValoracionText"
            />
    </LinearLayout>
</ScrollView>